--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
                 const totalRespuestas = filas.filter(fila => fila.trim() !== "").length;
 
                 document.getElementById("contador").textContent = 
-                    `Número de respuestas: ${totalRespuestas-1}`;
+                    `Número de respuestas: ${totalRespuestas}`;
             } catch (error) {
                 document.getElementById("contador").textContent = 
                     "Error al cargar el número de respuestas.";
